syntax = "proto3";

option csharp_namespace = "TimeService.Protos";

package employee;

service EmployeeGrpc {
  rpc GetEmployee (GetEmployeeRequest) returns (EmployeeResponse);
  rpc GetEmployeeManager (GetEmployeeManagerRequest) returns (EmployeeResponse);
  rpc ValidateManagerPermission (ValidateManagerPermissionRequest) returns (ValidateManagerPermissionResponse);
}

message GetEmployeeRequest {
  string employee_id = 1;
}

message EmployeeResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string department_id = 6;
  string department_name = 7;
  string team_id = 8;
  string team_name = 9;
  string position = 10;
  string manager_id = 11;
  string manager_name = 12;
  string keycloak_user_id = 13;
  string hire_date = 14;
  string status = 15;
  string created_at = 16;
  string updated_at = 17;
}

message GetEmployeeManagerRequest {
  string employee_id = 1;
}

message ValidateManagerPermissionRequest {
  string manager_id = 1;
  string employee_id = 2;
}

message ValidateManagerPermissionResponse {
  bool is_valid = 1;
  string message = 2;
}
